chore: disable database

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= turbo_frame_tag 'main' do %>
+      <%= yield %>
+    <% end %>
   </body>
 </html>
